--- a/src/app/ball/ball.component.html
+++ b/src/app/ball/ball.component.html
@@ -1,3 +1,4 @@
+<h2 class="blinking">Try to pull out the lucky ticket!</h2>
 <div class="winningNumberBalls">
   <div *ngFor="let ball of activeBalls"><span (click)="addBallToBacket(ball)">{{ball}}</span></div>
-  </div>
+</div>
