--- a/src/app/win-balls/win-balls.component.html
+++ b/src/app/win-balls/win-balls.component.html
@@ -1,4 +1,6 @@
+
 <div class="numbers" *ngIf="backetOfBalls.length > 0">
+  <div>You have tickets:</div>
   <div *ngFor="let bball of backetOfBalls; let i = index" class="ball"
    (click)="returnBall(bball)" [style.animation-delay]="setDelay(i)">{{bball}}</div>
 
