--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,8 @@
-<mat-toolbar color="primary">Angular Truffle Box</mat-toolbar>
+<!-- <mat-toolbar >Guess the happy number</mat-toolbar> -->
+<div class="panel-buttons">
+  <button mat-raised-button (click)="changePage('loto')">Game</button>
+  <button mat-raised-button (click)="changePage('rules')">Rules</button>
+  <button mat-raised-button (click)="startJackPot()">Finish</button>
+  <button mat-raised-button (click)="changePage('statistic')">Statistic</button>
+  <button mat-raised-button (click)="changePage('info')">Info</button>
+</div>
