set finish disable button

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,16 +1,16 @@
 <div class="content">
   <div class="card-container">
     <a class="circle-link" title="Starkware" href="https://starkware.co/" target="_blank" rel="noopener">
-      <img src="./../../assets/img/starkware.svg">
+      <img src="assets/img/starkware.svg">
     </a>
     <a class="circle-link" title="VeeDo" href="https://github.com/starkware-libs/veedo" target="_blank" rel="noopener">
-      <img src="./../../assets/img/veedo.png">
+      <img src="assets/img/veedo.png">
     </a>
     <a class="circle-link" title="Ethereum" href="https://ethereum.org/" target="_blank" rel="noopener">
-      <img src="./../../assets/img/ethereum.png">
+      <img src="assets/img/ethereum.png">
     </a>
     <a class="circle-link" title="Solidity" href="https://solidity.readthedocs.io/en/v0.6.11/" target="_blank" rel="noopener">
-      <img src="./../../assets/img/solidity.svg" width="30px">
+      <img src="assets/img/solidity.svg" width="30px">
     </a>
     <a class="circle-link" title="CLI" href="https://cli.angular.io/" target="_blank" rel="noopener">
       <svg alt="Angular CLI Logo" xmlns="http://www.w3.org/2000/svg" width="21.762" height="23.447"
