--- a/src/app/loto/loto.component.html
+++ b/src/app/loto/loto.component.html
@@ -2,7 +2,7 @@
   <!-- (opened)="events.push('open!')"
                (closed)="events.push('close!')" -->
   <mat-sidenav #sidenav mode="side" [(opened)]="opened">
-    <app-header></app-header>
+    <app-header [nubmerGame]="lotteryNumber"></app-header>
   </mat-sidenav>
 
   <mat-sidenav-content>
@@ -10,10 +10,15 @@
       <button mat-mini-fab color="warn" aria-label="Example icon button with a menu icon" (click)="sidenav.toggle()">
         <mat-icon>menu</mat-icon>
       </button>
-      <span class="title-game">Guess the happy number</span>
-    </div> <div *ngIf="activePage === 'loto'">
+      <div class="title-game">Lottery number {{lotteryNumber}}</div>
+      <!-- <span class="title-game">Guess the happy number!</span> -->
+    </div>
+     <div *ngIf="activePage === 'loto'">
       <app-win-balls></app-win-balls>
       <app-ball></app-ball>
+    </div>
+    <div *ngIf="activePage === 'exchange'">
+      <app-exchange></app-exchange>
     </div>
     <div *ngIf="activePage === 'statistic'">
       <app-statistic></app-statistic>
