--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -1,9 +1,9 @@
 <div class="info">
-  <h2>Team Caravan</h2>
+  <h2>Team "Caravan"</h2>
   <div class="card">
     <p>Karpus Paul</p>
 
-    <img src="./../../assets/img/paul.png" alt="Karpus Paul">
+    <img src="assets/img/paul.png" alt="Karpus Paul">
     <p>Blockchain developer</p>
     <a href="https://t.me/Spread2018" target="_blank" rel="noopener">Telegram</a>
   </div>
